--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
               <a href="./index.html" class="Logo">WebStudio</a>
             </li>
             <li class="link-list">
-              <a href="/index.html" class="link">Estudio</a>
+              <a href="./index.html" class="link">Estudio</a>
             </li>
             <li class="link-list">
               <a href="./portfolio.html" class="link current">Portafolio</a>
@@ -52,7 +52,7 @@
     </div>
     <div class="border">
       <div class="container buttons">
-        <button type="button" class="button-portfolio">Todo</button>
+        <button type="button" class="button-portfolio actual">Todo</button>
         <button type="button" class="button-portfolio">Sitios-web</button>
         <button type="button" class="button-portfolio">Aplicaciones</button>
         <button type="button" class="button-portfolio">Diseño</button>
@@ -258,7 +258,7 @@
       </div>
     </div>
 
-    <footer>
+    <footer class="footer">
       <address class="container list-footer">
         <ul>
           <li>
