--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-04</title>
+    <title>goit-markup-hw-0</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -27,7 +27,7 @@
               <a href="./index.html" class="Logo">WebStudio</a>
             </li>
             <li class="link-list">
-              <a href="" class="link current">Estudio</a>
+              <a href="./index.html" class="link current">Estudio</a>
             </li>
             <li class="link-list">
               <a href="./portfolio.html" class="link">Portafolio</a>
@@ -152,19 +152,17 @@
             </figure>
             <ul class="list">
               <li class="social">
-                <a href="" class="social-links">
-                  <svg class="social-font" width="20" height="20">
-                    <use href="images/icons.svg#instagram"></use>
-                  </svg>
-                </a>
+                <svg class="social-font" width="20" height="20">
+                  <use href="images/icons.svg#instagram"></use>
+                </svg>
               </li>
               <li class="social">
-                <svg class="social-font" width="20" height="20">
+                <svg class="" width="20" height="20">
                   <use href="images/icons.svg#twitter"></use>
                 </svg>
               </li>
               <li class="social">
-                <svg class="social-font" width="20" height="20">
+                <svg class="" width="20" height="20">
                   <use href="images/icons.svg#facebook"></use>
                 </svg>
               </li>
@@ -189,11 +187,9 @@
             </figure>
             <ul class="list">
               <li class="social">
-                <a href="" class="social-links">
-                  <svg class="social-font" width="20" height="20">
-                    <use href="images/icons.svg#instagram"></use>
-                  </svg>
-                </a>
+                <svg class="social-font" width="20" height="20">
+                  <use href="images/icons.svg#instagram"></use>
+                </svg>
               </li>
               <li class="social">
                 <svg class="social-font" width="20" height="20">
@@ -226,11 +222,9 @@
             </figure>
             <ul class="list">
               <li class="social">
-                <a href="" class="social-links">
-                  <svg class="social-font" width="20" height="20">
-                    <use href="images/icons.svg#instagram"></use>
-                  </svg>
-                </a>
+                <svg class="social-font" width="20" height="20">
+                  <use href="images/icons.svg#instagram"></use>
+                </svg>
               </li>
               <li class="social">
                 <svg class="social-font" width="20" height="20">
@@ -263,24 +257,22 @@
             </figure>
             <ul class="list">
               <li class="social">
-                <a href="" class="social-links">
-                  <svg class="social-font" width="20" height="20">
-                    <use href="images/icons.svg#instagram"></use>
-                  </svg>
-                </a>
+                <svg class="" width="20" height="20">
+                  <use href="images/icons.svg#instagram"></use>
+                </svg>
               </li>
               <li class="social">
-                <svg class="social-font" width="20" height="20">
+                <svg class="" width="20" height="20">
                   <use href="images/icons.svg#twitter"></use>
                 </svg>
               </li>
               <li class="social">
-                <svg class="social-font" width="20" height="20">
+                <svg class="" width="20" height="20">
                   <use href="images/icons.svg#facebook"></use>
                 </svg>
               </li>
               <li class="social">
-                <svg class="social-font" width="20" height="20">
+                <svg class="" width="20" height="20">
                   <use href="images/icons.svg#linkedin"></use>
                 </svg>
               </li>
@@ -338,7 +330,7 @@
       </ul>
     </div>
 
-    <footer>
+    <footer class="footer">
       <address class="container list-footer">
         <ul>
           <li>
